<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/chooseTimeAlertColor"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:textAllCaps="true"
            android:id="@+id/title_to_show_options"
            android:text="@string/chooseTimeAlertTitle"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.lucaspellegrinelli.busao.xmlclasses.TimePicker24Hours
                android:layout_width="wrap_content"
                android:id="@+id/timePicker"
                android:layout_height="wrap_content"></com.lucaspellegrinelli.busao.xmlclasses.TimePicker24Hours>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/chooseTimeAlertButtonColor"
                    android:textAllCaps="true"
                    android:text="@string/chooseTimeAlertCancel"
                    android:layout_weight="1"
                    android:id="@+id/button_option_1"
                    android:textColor="#fff"
                    android:textSize="13dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/chooseTimeAlertButtonColor"
                    android:textAllCaps="true"
                    android:text="@string/chooseTimeAlertOk"
                    android:id="@+id/button_option_2"
                    android:textColor="#fff"
                    android:textSize="13dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>